other files deleted and url remote changed to this private repo ---jan_18

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "my-app-tc",
-    "slug": "my-app-tc",
+    "name": "my-app-wd",
+    "slug": "my-app-wd",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
